--- a/app/src/main/res/layout/introduction_fragment.xml
+++ b/app/src/main/res/layout/introduction_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,51 +14,36 @@
         android:gravity="center"
         android:text="@string/rightAddress"
         android:textSize="30sp"
-
-        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
-        app:layout_constraintEnd_toEndOf="@+id/guideline4"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        android:layout_marginTop="250dp"
+        android:layout_gravity="center_horizontal"
         >
     </TextView>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/quality"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintBottom_toBottomOf="@+id/guideline7"
-
-        android:textAlignment="center"
-        android:gravity="center"
         style="@style/h2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:gravity="center"
+        android:text="@string/quality"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:layout_marginTop="400dp"
+        android:layout_gravity="center_horizontal"
         >
+
     </TextView>
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="@dimen/smallButtonWidth"
+        android:layout_height="@dimen/smallButtonHeight"
+        style="@style/blueButtonStyle"
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="376dp" />
+        android:layout_marginTop="550dp"
+        android:text="Start"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="47dp" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="357dp" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="475dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
