--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="g_gray700">#666666</color>
     <color name="g_black">#171717</color>
-    <color name="g_blue">#000DAE</color>
+    <color name="main">#8D43B5</color>
     <color name="g_white">#F5F8FA</color>
-    <color name="g_dark_blue">#000759</color>
+    <color name="secondMain">#DBBDEB</color>
     <color name="g_blue_gray200">#97AABD</color>
     <color name="g_light_red">#FF9999</color>
     <color name="g_card_background">#FAFDFF</color>
@@ -22,5 +22,6 @@
     <color name="g_gray500">#969899</color>
     <color name="g_orange_yellow">#F8BA00</color>
     <color name="g_green">#11FF00</color>
+
 
 </resources>
