--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,9 @@
     <dimen name="smallButtonWidth">130dp</dimen>
     <dimen name="smallButtonHeight">55dp</dimen>
     <dimen name="buttonCorners">5dp</dimen>
-    <dimen name="mediumButtonWidth">200dp</dimen>
+    <dimen name="mediumButtonWidth">300dp</dimen>
     <dimen name="mediumButtonHeight">55dp</dimen>
     <dimen name="edittextHeight">60dp</dimen>
+    <dimen name="btn_corner">15dp</dimen>
+    <dimen name="btn_corner2">5dp</dimen>
 </resources>
