--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,15 +20,22 @@
     </style>
 
     <style name="blueButtonStyle">
-        <item name="android:background">@drawable/blue_background</item>
+        <item name="android:background">@drawable/btn_background</item>
         <item name="android:fontFamily">@font/poppins_thin</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/h2TextSize</item>
         <item name="android:textAllCaps">false</item>
     </style>
+    <style name="blueWhiteButtonStyle">
+        <item name="android:background">@drawable/btn_bluewhite</item>
+        <item name="android:fontFamily">@font/poppins_thin</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/h2TextSize</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
     <style name="whiteButtonStyle">
-        <item name="android:background">@drawable/white_background</item>
+        <item name="android:background">@drawable/btn_white_background</item>
         <item name="android:fontFamily">@font/poppins_thin</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/h2TextSize</item>
@@ -36,7 +43,7 @@
     </style>
 
     <style name="editText">
-        <item name="android:background">@drawable/white_background</item>
+        <item name="android:background">@drawable/btn_white_background</item>
         <item name="android:gravity">center</item>
         <item name="singleLine">true</item>
         <item name="android:textStyle">bold</item>
